Fix: Render Scholarships section in CV

--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -147,7 +147,7 @@ layout: default
             {% continue %}
           {% endif %}
           
-          {% if section_title == 'Research Experience' or section_title == 'International Experience' or section_title == 'Teaching Experience' or section_title == 'Military Service' or section_title == 'Work Experience' %}
+          {% if section_title == 'Research Experience' or section_title == 'International Experience' or section_title == 'Teaching Experience' or section_title == 'Military Service' or section_title == 'Work Experience' or section_title == 'Scholarships' %}
             <a class="anchor" id="{{ section_title | slugify }}"></a>
             <div class="card mt-3 p-3">
               <h3 class="card-title font-weight-medium">{{ section_title }}</h3>
