Add Obsidian compatibility for highlights and callouts

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -206,3 +206,6 @@
     crossorigin="anonymous"
   >
 {% endif %}
+
+<!-- Obsidian Compatibility -->
+<link rel="stylesheet" href="{{ '/assets/css/obsidian-compat.css' | relative_url | bust_file_cache }}">
