--- a/_includes/scripts.liquid
+++ b/_includes/scripts.liquid
@@ -376,3 +376,6 @@
 {% if site.newsletter.enabled %}
   <script defer src="{{ '/assets/js/newsletter.js' | relative_url | bust_file_cache }}"></script>
 {% endif %}
+
+<!-- Obsidian Compatibility -->
+<script src="{{ '/assets/js/obsidian-compat.js' | relative_url | bust_file_cache }}"></script>
